--- a/src/app/ui/style.scss
+++ b/src/app/ui/style.scss
@@ -134,7 +134,6 @@ a {
         align-items: center;
         justify-content: center;
 
-        overflow: hidden;
         overflow-wrap: break-word;
 
         cursor: pointer;
@@ -311,6 +310,44 @@ a {
     }
 }
 
+.contact-icon {
+    display: grid;
+
+    .profile-picture, .chat-endpoint-overlay {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+}
+
+.chat-endpoint-overlay {
+    pointer-events: none;
+    display: grid;
+
+    .unread-messages {
+        display: flex;
+
+        text-align: left;
+
+        align-items: center;
+        align-self: start;
+
+        height: 0.25rem;
+        font-size: 1.25rem;
+
+        margin-top: 0.5rem;
+        margin-left: 0.125rem;
+
+
+        text-shadow: 0 0 0.125rem #000;
+        font-weight: bold;
+    }
+
+    &.unread {
+        box-shadow: 0 0 0.5rem #fff, 0 0 0.25rem #fff inset;
+        outline: 1px solid #fff;
+    }
+}
+
+
 .profile-picture {
     display: grid;
     width: 100%;
@@ -329,6 +366,7 @@ a {
         grid-area: 2 / 2 / 3 / 3;
         width: 0.5rem;
         height: 0.5rem;
+        z-index: 4;
 
         box-shadow: 0 0 0.25rem #000;
 
